# olympus-browser-qt

./: .gitignore  LICENSE  README.md  publish.cmd  pyproject.toml  run_viewer.cmd
examples/: cideconvolve_open_olympus.py  minimal_multi_select.py  minimal_single_select.py
src/evident_browser_qt/: api.py  evident_browser_dialog.py  evident_image_loader.py  models.py  preview.py  vsi_attachments.py  vsi_native.py
src/olympus_browser_qt/: __init__.py  cli.py  icons.py  metadata.py  olympus_gateway.py  olympus_pixels.py  olympus_tree_model.py  olympus_viewer.py  scale_bar.py  vsi_metadata.py  widgets.py
tests/: test_models.py  test_olympus_viewer.py  test_preview.py  test_public_api.py  test_vsi_metadata.py
